Adde 'ALL' button so that when clicked it dispalys full menu

--- a/Restaurant Menu/index.html
+++ b/Restaurant Menu/index.html
@@ -16,7 +16,8 @@
             </div>
     
             <div class = "menu-btns">
-              <button type = "button" class = "menu-btn active-btn" id = "featured">featured</button>
+                <button type = "button" class = "menu-btn active-btn" id = "all">all</button>
+              <button type = "button" class = "menu-btn" id = "featured">featured</button>
               <button type = "button" class = "menu-btn" id = "today-special">today's special</button>
               <button type = "button" class = "menu-btn" id = "new-arrival">new arrivals</button>
             </div>
