--- a/Restaurant Menu/index.html
+++ b/Restaurant Menu/index.html
@@ -16,10 +16,10 @@
             </div>
     
             <div class = "menu-btns">
-                <button type = "button" class = "menu-btn active-btn" id = "all">all</button>
-              <button type = "button" class = "menu-btn" id = "featured">featured</button>
-              <button type = "button" class = "menu-btn" id = "today-special">today's special</button>
-              <button type = "button" class = "menu-btn" id = "new-arrival">new arrivals</button>
+              <button type = "button" class = "menu-btn active-btn" id = "all">All</button>
+              <button type = "button" class = "menu-btn" id = "featured">Featured</button>
+              <button type = "button" class = "menu-btn" id = "today-special">Today's special</button>
+              <button type = "button" class = "menu-btn" id = "new-arrival">New arrivals</button>
             </div>
 
             <div class="food-items">
