added cart button and its features

--- a/Restaurant Menu/index.html
+++ b/Restaurant Menu/index.html
@@ -12,11 +12,12 @@
         <div class = "menu-container">
             <div class = "menu-head">
               <h2>Special Food Menu</h2>
-              <a href="cart.html"><img src="logo/shopping-cart-logo.jpeg"></a>
+              <a href="#" class="cart-logo"><img src="logo/shopping-cart-logo.jpeg"></a>
             </div>
             <div class="head-content">
               <p>Welcome to our restaurant! We offer a diverse menu that caters to all tastes and preferences. We take pride in our carefully crafted dishes made with the freshest ingredients available. Our menu features a range of classic dishes as well as innovative fusion cuisine. We also have daily specials that showcase the best seasonal produce available, so be sure to ask your server about today's special. If you're feeling adventurous, we invite you to try our new arrivals section, where our talented chefs experiment with bold new flavors and exciting combinations. Whether you're looking for a hearty meal, a light snack or a sweet treat, our menu has something for everyone.</p>
             </div>
+            <div class="cart-popup"></div>
     
             <div class = "menu-btns">
               <button type = "button" class = "menu-btn active-btn" id = "all">All</button>
