Added "Order" button popup Modal

--- a/Restaurant Menu/index.html
+++ b/Restaurant Menu/index.html
@@ -19,6 +19,9 @@
             </div>
             <div class="cart-popup">
                 <div class="item-total">Total:</div>
+                <div class="cart-actions">
+                    <button class="order-btn">Order</button>
+                 </div>
             </div>
     
             <div class = "menu-btns">
@@ -264,8 +267,13 @@
                     </div>
                 </div>
             </div>
-
         </div>
+        <div class="popup-modal">
+            <button class="close-modal">X</button>
+            <h4>Your order</h4>
+            <div class="order-items"></div>
+        </div>
+        <div class="overlay"></div>
 
     </section>
 
