--- a/Restaurant Menu/index.html
+++ b/Restaurant Menu/index.html
@@ -270,8 +270,8 @@
         </div>
         <div class="popup-modal">
             <button class="close-modal">X</button>
-            <h4>Your order</h4>
-            <div class="order-items"></div>
+            <p>Your orders:</p>
+            <ul class="order-items"></ul>
         </div>
         <div class="overlay"></div>
 
