--- a/Food Recipe/index.html
+++ b/Food Recipe/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +29,7 @@
         <h2 class="title">Your Search Results:</h2>
         <div id= "meal">
           <!-- meal item -->
-          <div class = "meal-item">
+          <!-- <div class = "meal-item">
             <div class = "meal-img">
               <img src = "food.jpg" alt = "food">
             </div>
@@ -38,7 +37,7 @@
               <h3>Potato Chips</h3>
               <a href = "#" class = "recipe-btn">Get Recipe</a>
             </div>
-          </div>
+          </div> -->
           <!-- end of meal item -->
       </div>
     </div>
@@ -51,7 +50,7 @@
 
       <!-- meal content -->
       <div class="meal-details-content">
-        <h2 class="recipe-title">Meals Name Here</h2>
+        <!--<h2 class="recipe-title">Meals Name Here</h2>
         <p class="recipe-category">Category Name</p>
         <div class="recipe-instruct">
           <h3>Instructions:</h3>
@@ -66,7 +65,7 @@
         </div>
         <div class="recipe-link">
           <a href="#" target="_blank">Watch Video</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
