--- a/Food Recipe/index.html
+++ b/Food Recipe/index.html
@@ -22,7 +22,9 @@
 
         <div class="meal-search-box">
           <input type="text" class="search-control" placeholder="Enter and ingredient" id="search-input">
-          <button type="submit" class="search-btn" id="search-btn"></button>
+          <button type="submit" class="search-btn" id="search-btn">
+            <i class = "fas fa-search"></i>
+          </button>
         </div>
       </div>
       <div class="meal-result">
